<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/cv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:onClick="btnOne"
            app:cardCornerRadius="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp">

                <ImageView
                    android:id="@+id/person_photo"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="16dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:src="@mipmap/bc1" />

                <TextView
                    android:id="@+id/person_name"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_toRightOf="@+id/person_photo"
                    android:layout_centerVertical="true"
                    android:text="@string/bc"
                    android:textSize="15sp" />

                <ImageView
                    android:id="@+id/chev"
                    android:layout_width="20dp"

                    android:layout_height="80dp"
                    android:layout_gravity="right"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_right_chevron" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cv2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:onClick="btnOne"
            app:cardCornerRadius="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp">

                <ImageView
                    android:id="@+id/person_photo2"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="16dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:src="@mipmap/bs1" />

                <TextView
                    android:id="@+id/person_name2"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_toRightOf="@+id/person_photo2"
                    android:layout_centerVertical="true"

                    android:text="@string/bs"
                    android:textSize="15sp" />

                <ImageView
                    android:id="@+id/chev2"
                    android:layout_width="20dp"

                    android:layout_height="80dp"
                    android:layout_gravity="right"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_right_chevron" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cv3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:onClick="btnOne"
            app:cardCornerRadius="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp">

                <ImageView
                    android:id="@+id/person_photo3"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="16dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:src="@mipmap/cc1" />

                <TextView
                    android:id="@+id/person_name3"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_toRightOf="@+id/person_photo3"
                    android:layout_centerVertical="true"
                    android:text="@string/cc"
                    android:textSize="15sp" />

                <ImageView
                    android:id="@+id/chev3"
                    android:layout_width="20dp"

                    android:layout_height="80dp"
                    android:layout_gravity="right"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_right_chevron" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cv4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:onClick="btnOne"
            app:cardCornerRadius="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp">

                <ImageView
                    android:id="@+id/person_photo4"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="16dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:src="@mipmap/cp1" />

                <TextView
                    android:id="@+id/person_name4"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_toRightOf="@+id/person_photo4"
                    android:layout_centerVertical="true"
                    android:text="@string/cp"
                    android:textSize="15sp" />

                <ImageView
                    android:id="@+id/chev4"
                    android:layout_width="20dp"

                    android:layout_height="80dp"
                    android:layout_gravity="right"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_right_chevron" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cv5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:onClick="btnOne"
            app:cardCornerRadius="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp">

                <ImageView
                    android:id="@+id/person_photo5"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="16dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:src="@mipmap/gm1" />

                <TextView
                    android:id="@+id/person_name5"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_toRightOf="@+id/person_photo5"
                    android:layout_centerVertical="true"
                    android:text="@string/gm"
                    android:textSize="15sp" />

                <ImageView
                    android:id="@+id/chev5"
                    android:layout_width="20dp"

                    android:layout_height="80dp"
                    android:layout_gravity="right"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_right_chevron" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cv6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:onClick="btnOne"
            app:cardCornerRadius="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp">

                <ImageView
                    android:id="@+id/person_photo6"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="16dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:src="@mipmap/gp1" />

                <TextView
                    android:id="@+id/person_name6"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_toRightOf="@+id/person_photo6"
                    android:layout_centerVertical="true"
                    android:text="@string/gp"
                    android:textSize="15sp" />

                <ImageView
                    android:id="@+id/chev6"
                    android:layout_width="20dp"

                    android:layout_height="80dp"
                    android:layout_gravity="right"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_right_chevron" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cv7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:onClick="btnOne"
            app:cardCornerRadius="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp">

                <ImageView
                    android:id="@+id/person_photo7"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="16dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:src="@mipmap/mpv1" />

                <TextView
                    android:id="@+id/person_name7"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_toRightOf="@+id/person_photo7"
                    android:layout_centerVertical="true"
                    android:text="@string/mpv"
                    android:textSize="15sp" />

                <ImageView
                    android:id="@+id/chev7"
                    android:layout_width="20dp"

                    android:layout_height="80dp"
                    android:layout_gravity="right"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_right_chevron" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cv8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:onClick="btnOne"
            app:cardCornerRadius="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp">

                <ImageView
                    android:id="@+id/person_photo8"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="16dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:src="@mipmap/pa1" />

                <TextView
                    android:id="@+id/person_name8"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_toRightOf="@+id/person_photo8"
                    android:layout_centerVertical="true"

                    android:text="@string/pa"
                    android:textSize="13sp" />

                <ImageView
                    android:id="@+id/chev8"
                    android:layout_width="20dp"

                    android:layout_height="80dp"
                    android:layout_gravity="right"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_right_chevron" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cv9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:onClick="btnOne"
            app:cardCornerRadius="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp">

                <ImageView
                    android:id="@+id/person_photo9"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="16dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:src="@mipmap/rt1" />

                <TextView
                    android:id="@+id/person_name9"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_toRightOf="@+id/person_photo9"
                    android:layout_centerVertical="true"
                    android:text="@string/rt"
                    android:textSize="15sp" />

                <ImageView
                    android:id="@+id/chev9"
                    android:layout_width="20dp"

                    android:layout_height="80dp"
                    android:layout_gravity="right"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_right_chevron" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cv10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:onClick="btnOne"
            app:cardCornerRadius="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp">

                <ImageView
                    android:id="@+id/person_photo10"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="16dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:src="@mipmap/sp1" />

                <TextView
                    android:id="@+id/person_name10"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_toRightOf="@+id/person_photo10"
                    android:layout_centerVertical="true"
                    android:text="@string/sp"
                    android:textSize="15sp" />

                <ImageView
                    android:id="@+id/chev10"
                    android:layout_width="20dp"
                    android:layout_height="80dp"
                    android:layout_gravity="right"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_right_chevron" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>


